[gd_scene load_steps=2 format=3 uid="uid://dvfycuva0uy7o"]

[ext_resource type="Script" uid="uid://cpfg7bpsocqkr" path="res://scripts/kill_zone.gd" id="1_xlapc"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
